app/assets/stylesheets/desktop/login.scss
// style that apply to the login popup

@import "common/foundation/variables";
@import "common/foundation/mixins";

#login-buttons {
  button {
    margin: 0 5px 5px 0;
    min-width: 180px;
  }
  margin-top: 10px;
  margin-bottom: 20px;
}

#login-form {
  a {
    color: $dark_gray;
    cursor: pointer;
  }
}

// Create account

#new-account-link {
	cursor: pointer;
}

.create-account {
  tr.input {
    td {
      padding-top: 10px;
    }
    input, label {
      margin-bottom: 0;
    }
  }

  tr.instructions {
    label {
      color: #888;
    }
  }
}

